--- a/src/pages/il-suastet/syllabary/morae/[...slug].astro
+++ b/src/pages/il-suastet/syllabary/morae/[...slug].astro
@@ -66,7 +66,7 @@ const parent_vowel = vowels.find((vowel) => (vowel.slug===mora.parent.vowel))
             </div>
         </div>
 
-        <Section>words using this mora</Section>
+        <Section>related morae</Section>
         <p class="text-omen">(section pending)</p>
 
     </main>
