made glyphblock component

--- a/src/components/GlyphGrid.astro
+++ b/src/components/GlyphGrid.astro
@@ -1,5 +1,5 @@
 ---
-import Glyph from '@/components/Glyph.astro'
+import GlyphBlock from '@/components/GlyphBlock.astro'
 import type { TypeGridGlyph } from "./TypeGridGlyph"
 
 export interface Props {
@@ -12,33 +12,6 @@ const { glyphs=[], lang } = Astro.props as Props
 
 <div class="max-w-4xl my-8 grid grid-cols-6 gap-4">
     {glyphs.map(glyph => (
-        <div>
-            <div class="grid-item center mx-auto aspect-square rounded-sm">
-                <a href={glyph.url} class="block h-full w-full">
-                    <div class="flex h-full">
-                        <div class="glyph-container m-auto" title={glyph.title}>
-                            <Glyph lang={lang} src={glyph.src} />
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
+        <GlyphBlock glyph={{lang:lang,src:glyph.src}} url={glyph.url} />
     ))}
 </div>
-
-<style lang="scss">
-
-    .grid-item {
-        color: var(--color-ink);
-        background-color: color-mix(in srgb, var(--color-paper), var(--color-gem) 20%);;
-        &:hover {
-            background-color: var(--color-gem);
-            color: var(--color-paper);
-        }
-    }
-    .glyph-container {
-        width: 60%;
-        height: 60%;
-    }
-
-</style>
