--- a/src/pages/il-suastet/syllabary/consonants/[...slug].astro
+++ b/src/pages/il-suastet/syllabary/consonants/[...slug].astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@/layouts/Layout.astro"
 import Ariadne from "@/components/Ariadne.astro"
-import Glyph from "@/components/Glyph.astro"
+import GlyphBlock from "@/components/GlyphBlock.astro"
 import Section from "@/components/Section.astro"
 import GlyphGrid from "@/components/GlyphGrid.astro"
 import type { TypeGridGlyph } from "@/components/TypeGridGlyph"
@@ -35,13 +35,9 @@ const grid_morae:TypeGridGlyph[] = morae.filter((mora:Lang2Mora) => (mora.parent
         <Ariadne links={ariadne}/>
 
         <div class="my-4">
-            <div class="flex flex-row gap-8">
-                <div>
-                    <div class="glyph-container min-w-32 rounded-sm aspect-square h-full flex">
-                        <div class="sub block m-auto">
-                            <Glyph src={consonant.src.img} lang="lang2" />
-                        </div>
-                    </div>
+            <div class="flex flex-row gap-8 items-center">
+                <div class="min-w-32">
+                    <GlyphBlock glyph={{src:consonant.src.img,lang:"lang2"}} />
                 </div>
                 <div>
                     <div>IPA</div>
@@ -62,13 +58,3 @@ const grid_morae:TypeGridGlyph[] = morae.filter((mora:Lang2Mora) => (mora.parent
 
     </main>
 </Layout>
-
-<style lang="scss">
-    .glyph-container {
-        background-color: color-mix(in srgb, var(--color-paper), var(--color-stone) 50%);
-        .sub {
-            width: 60%;
-            height: 60%;
-        }
-    }
-</style>
