--- a/src/pages/basheste/alphabet/index.astro
+++ b/src/pages/basheste/alphabet/index.astro
@@ -1,70 +1,21 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import Ariadne from '@/components/Ariadne.astro';
-import Glyph from '@/components/Glyph.astro';
 
 const ariadne = [
     { name: "home", url: "/" },
     { name: "Basheste", url: "/basheste" },
     { name: "alphabet" }
 ]
-
-const alphabet = [
-    {
-        name: "baba",
-        type: "vowel",
-        src: "/glyph/dummy1.svg"
-    },
-    {
-        name: "keke",
-        type: "consonant",
-        src: "/glyph/dummy2.svg"
-    },
-    {
-        name: "jiji",
-        type: "punctuation",
-        src: "/glyph/dummy3.svg"
-    }
-]
 ---
 
 <Layout tab="alphabet < Basheste">
     <main class="container max-w-3xl px-8 mx-auto">
+        
         <h1>alphabet</h1>
         <Ariadne links={ariadne}/>
 
-        <div class="max-w-4xl mt-8 grid grid-cols-6 gap-4">
-            {alphabet.map(letter => (
-                <div>
-                    <div class="letter bg-paper border-2 center mx-auto aspect-square rounded-sm">
-                        <a href="/" class="block h-full w-full">
-                            <div class="flex h-full">
-                                <div class="letter-container m-auto" title={letter.name}>
-                                    <Glyph src={letter.src} />
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            ))}
-        </div>
+        <p class="text-omen">(section pending)</p>
         
     </main>
 </Layout>
-
-<style lang="scss">
-
-    .letter {
-        color: var(--color-ink);
-        border-color: var(--color-gem);
-        &:hover {
-            background-color: var(--color-gem);
-            color: var(--color-paper);
-        }
-    }
-    .letter-container {
-        width: 60%;
-        height: 60%;
-    }
-
-</style>
