--- a/src/pages/il-suastet/index.astro
+++ b/src/pages/il-suastet/index.astro
@@ -23,6 +23,9 @@ const ariadne = [
                 <li class="ml-4">
                     <a href="/il-suastet/syllabary">syllabary</a>
                 </li>
+                <li class="ml-4">
+                    <a href="/il-suastet/numerals">numerals</a>
+                </li>
             </ul>
         </p>
 
